# attack-on-frida

./: .gitignore  README.md  package.json  pyproject.toml  tsconfig.json
ModesofOperation/: README.md
apks/: config.json  release-2.0.0.apk
cli/: README.md
cli/attack/: __init__.py  a.py
cli/tests/: test_pytest.py
ctf/: stacktrace.js
frida-android/: settings.gradle.kts
frida-android/app/: build.gradle.kts
frida-android/app/src/androidTest/java/com/electrolytej/attack/: ExampleInstrumentedTest.kt
frida-android/app/src/main/: AndroidManifest.xml
frida-android/app/src/main/java/com/electrolytej/attack/: MainActivity.kt
frida-android/app/src/main/java/com/electrolytej/attack/ui/theme/: Color.kt  Theme.kt  Type.kt
frida-android/app/src/main/res/values/: strings.xml  themes.xml
frida-android/gradle/wrapper/: gradle-wrapper.properties
frida-android/mylibrary/: build.gradle.kts
frida-android/mylibrary/src/androidTest/java/com/electrolytej/attack/: ExampleInstrumentedTest.kt
frida-android/mylibrary/src/main/java/com/electrolytej/attack/: Frida.kt
frida-android/mylibrary/src/test/java/com/electrolytej/attack/: ExampleUnitTest.kt
host/: README.md  pyproject.toml
plugin/: package.json
plugin/src/: HttpLoggingInterceptor.js  hook_art.js  hook_okhttp.js  hook_pms.js  index.ts  pms_attack.js
plugin/src/attack/control/: hello.c
plugin/src/attack/ctf/: ctf.py
plugin/src/utils/: hooker.js  reflect.js
plugin/tests/: test_unitest.py
plugins/versionInfo/: __init__.py
scheduler/attack/control/: rpc.py
src/: hook_art_method.js  index.ts
src/attack/: example.py
src/attack/ctf/: bridge.js
src/utils/: hooker.js  p.ts
tests/: test_pytest.py
