[project]
name = "attack-on-frida"
version = "0.1.0"
description = ""
authors = [
    {name = "electrolytej",email = "electrolytej@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "attack-on-frida"
version = "1.0.0"
description = "ttack-on-frida"
authors = ["electrolyteJ <electrolytej@gmail.com>"]
license = "Apache2"
readme = "README.md"
#packages = [{ include = "ma", from = "src" }]

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#default = false
#secondary = false

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
frida_tools = "^16.7.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "1.4.2"
mkdocs-material = "^9.1.5"
mkdocs-material-extensions = "1.1.1"
mkdocs-static-i18n = "0.53"
mkdocs-rss-plugin = "1.6.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.poetry.scripts]
#android = 'ma:android'
#cli = 'ma:cli'