#[project]
#name = "ak-on-frida"
#version = "0.1.0"
#description = ""
#authors = [
#    {name = "electrolytej",email = "electrolytej@gmail.com"}
#]
#readme = "README.md"
##requires-python = ">=3.13"
#dependencies = [
#    "frida (>=16.7.3,<17.0.0)"
#]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
#default = false
#secondary = false

[tool.poetry]
name = "attack-on-frida"
version = "1.0.0"
description = "ttack-on-frida"
authors = ["electrolyteJ <electrolytej@gmail.com>"]
license = "Apache2"
readme = "README.md"

packages = [
    { include = "attack", from = "src" },
    { include = "attack", from = "cli" },
    { include = "attack", from = "scheduler" },
]
include = [
    "src/resources/**/*",
    "cli/resources/**/*",
    "scheduler/resources/**/*",
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.2"
#frida-tools = "^16.7.3"
frida = "^16.7.3"

[tool.poetry.group.dev.dependencies]
mkdocs = "1.4.2"
mkdocs-material = "^9.1.5"
mkdocs-material-extensions = "1.1.1"
mkdocs-static-i18n = "0.53"
mkdocs-rss-plugin = "1.6.0"
mypy = "^1.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pytest = "^7.3.2"
black = "^23.3.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
warn_return_any = true

[tool.black]
line-length = 120

[tool.poetry.scripts]
#cli = 'ma:cli'
#android = 'ma:android'

